--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-<div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Document</title>
+</head>
+<body>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur architecto illum inventore officiis corporis nobis eum ex? Doloremque eligendi beatae rem harum veniam obcaecati? Labore error eum rem sit perspiciatis.</p>
+</body>
+</html>
+
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Repetition</title>
+    </head>
+    <body>
+        <h1>Repeat</h1>
+    </body>
+</html>
