--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <script src="dom_manipulation.js"></script>
     <title>Document</title>
 </head>
 <body>
