--- a/index.html
+++ b/index.html
@@ -2,20 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <script src="dom_manipulation.js"></script>
+    <script src="dom_manipulation.js" defer></script>
     <title>Document</title>
 </head>
 <body>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur architecto illum inventore officiis corporis nobis eum ex? Doloremque eligendi beatae rem harum veniam obcaecati? Labore error eum rem sit perspiciatis.</p>
+    <div id="container"></div>
 </body>
-</html>
-
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Repetition</title>
-    </head>
-    <body>
-        <h1>Repeat</h1>
-    </body>
 </html>
