Added buttons and added functionality with event listeners

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur architecto illum inventore officiis corporis nobis eum ex? Doloremque eligendi beatae rem harum veniam obcaecati? Labore error eum rem sit perspiciatis.</p>
     <div id="container"></div>
+    <button id="uni">Click Me!</button>
 </body>
 </html>
